syntax = "proto3";
package dev.array21.invoicex;

import "entities/org.proto";

message Product {
  string id = 1;
  Org org = 2;
  string name = 3;
  optional string description = 4;
  optional string productCode = 5;
  float pricePerUnit = 6;
  optional float taxPercentage = 7;
}